<resources>
    <string name="app_name">ProyectoMovilDeliveryGo</string>
    <string name="activity_pedido_exitoso_pedido">Pedido</string>
    <string name="activity_pedido_exitoso_titulo">Su pedido fue exitoso</string>
    <string name="activity_pedido_exitoso_delivery">Delivery</string>
    <string name="activity_pedido_exitoso_descripcion">Se le entregara los productos conforme lo haya ordenado</string>
    <string name="activity_pedido_exitoso_text_boton">Volver al inicio</string>
    <string name="activity_ingresar_app_boton_sesion">Iniciar sesión con mi cuenta</string>
    <string name="activity_ingresar_app_crear_cuenta">Crear una cuenta</string>
    <string name="activity_registro_exitoso_titulo">Felicitaciones</string>
    <string name="activity_registro_exitoso_titulo2">Tu registro fue exitoso</string>
    <string name="activity_registro_exitoso_boton_sesion">Iniciar sesión</string>
    <string name="activity_cuanto_pagar_titulo_appBar">Efectivo</string>
    <string name="activity_cuanto_Vas_pagar_titulo">¿Con cuánto vas a pagar?</string>
    <string name="activity_cuanto_vas_pagar_descripcion">Recuerda que el valor pedido es de S/0.00</string>
    <string name="activity_cuanto_vas_pagar_confirmar">Confirmar</string>
    <string name="activity_cuanto_vas_pagar_edt_monto">Ingresa el monto</string>
    <string name="activity_registro_app_nombres">Nombres</string>
    <string name="activity_registro_app_titulo">Registrarse</string>
    <string name="activity_registro_app_apellidos">Apellidos</string>
    <string name="activity_registro_app_email">Correo electronico</string>
    <string name="activity_registro_app_telefono">Numero de telefono</string>
    <string name="activity_registro_app_contrasenia">Contraseña</string>
    <string name="activity_registrar_app_confirmarContrasenia">Confirmar contraseña</string>
    <string name="activity_registro_app_registrarse">Registrarse</string>
    <string name="activity_registro_app_pregunta">¿Ya tienes una cuenta?</string>
    <string name="activity_registro_app_iniciar_sesion">Iniciar Sesión</string>
    <string name="activity_iniciar_sesion_titulo">Iniciar Sesion</string>
    <string name="activity_iniciar_sesion_email">Correo electronico</string>
    <string name="activity_iniciar_sesion_password">Contraseña</string>
    <string name="activity_iniciar_sesion_olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="activity_iniciar_sesion_boton_login">Ingresar</string>
    <string name="activity_iniciar_sesion_crear_cuenta">¿No tienes una cuenta</string>
    <string name="activity_iniciar_sesion_crear_cuenta_boton">Crear cuenta</string>
    <string name="activity_informacion_personal_titulo_app_bar">Información personal</string>
    <string name="activity_informacion_personal_titulo">General</string>
    <string name="activity_informacion_personal_nombres">Nombres</string>
    <string name="activity_informacion_personal_apellidos">Apellidos</string>
    <string name="activity_informacion_personal_correo">Correo electronico</string>
    <string name="activity_informacion_personal_telefono">telefono</string>
    <string name="activity_informacion_personal_nacimiento">Fecha de nacimiento</string>
    <string name="activity_informacion_personal_masculino">Masculino</string>
    <string name="activity_informacion_personal_femenino">Femenino</string>
    <string name="activity_informacion_personal_boton_guardar">Guardar</string>
    <string name="activity_informacion_personal_cambiar_contraseña_titulo">Cambiar contraseña</string>
    <string name="activity_informacion_personal_contraseña_actual">Contraseña actual</string>
    <string name="activity_informacion_personal_guardar_nueva_contraseña">Guardar</string>
    <string name="activity_informacion_personal_boton_nueva_contraseña">Nueva contraseña</string>
    <string name="title_activity_menu_lateral">Activity_Menu_Lateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Mis pedidos</string>
    <string name="activity_menu_lateral_nombre">Santiago Cajachagua</string>
    <string name="activity_menu_lateral_email_perfil">Santiago@gmail.com</string>
    <string name="activity_main_drawer_inicio">Inicio</string>
    <string name="activity_main_drawer_pedidos">Mis pedidos</string>
    <string name="activity_main_drawer_favoritos">Mis favoritos</string>
    <string name="activity_main_drawer_perfil">Mi perfil</string>
    <string name="activity_main_drawer_ayuda">Ayuda</string>
    <string name="activity_tus_pedidos_titulo">Tus pedidos</string>
    <string name="activity_tus_pedidos_tu_pedido">Te llega en</string>
    <string name="activity_tus_pedidos_envio">Envío</string>
    <string name="activity_tus_pedidos_minimo">Mínimo</string>
    <string name="activity_tus_pedidos_tiempo">40 - 60 min</string>
    <string name="activity_tus_pedidos_precio">s/4.90</string>
    <string name="activity_tus_pedidos_minimo_precio">s/8.90</string>
    <string name="activity_tus_pedidos_resumen">Resumen de pedido</string>
    <string name="activity_tus_pedidos_producto">Productos</string>
    <string name="activity_tus_pedidos_envioo">Envío</string>
    <string name="activity_tus_pedidos_precio_pedido">s/10.0</string>
    <string name="activity_tus_pedidos_envio_pedido">s/0.0</string>
    <string name="activity_tus_pedidos_subtotal">Subtotal</string>
    <string name="activity_tus_pedidos_subtotal_pedido">s/ 10.0</string>
    <string name="activity_tus_pedidos_pagar_boton">Ir a pagar</string>
    <string name="activity_detalle_producto_nombre">Botella de cerveza</string>
    <string name="activity_detalle_producto_detalle">Cerveza pilsen de trigo</string>
    <string name="activity_detalle_producto_precio">s/ 20.00</string>
    <string name="activity_detalle_producto_comentario">Comentario de pedido</string>
    <string name="activity_detalle_producto_nota">Escribe una nota</string>
    <string name="activity_detalle_producto_agregar_carrito">Añadir a carrito</string>
    <string name="activity_configurar_perfil_nombre">Santigo Cajachagua</string>
    <string name="activity_configurar_perfil_correo">santiago@gmail.com</string>
    <string name="activity_configurar_perfil_informacion_personal">Informacion personal</string>
    <string name="activity_configurar_perfil_configuracion">Configuración</string>
    <string name="activity_configurar_perfil_preferencias">Preferencias</string>
    <string name="activity_configurar_perfil_legal">Información legal</string>
    <string name="activity_configurar_perfil_cerrar_sesion">Cerrar Sesión</string>
    <string name="menu_pedidos">Mis Pedidos</string>
    <string name="activity_pagar_pedido_boton_metodo_de_pago">Aceptar Metodo de pago</string>
    <string name="activity_confirmar_pedido_titulo">Detalle de entrega</string>
    <string name="activity_main_drawer_mispedidos">Mis Pedidos</string>
</resources>