<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_Configurar_Perfil">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/transparente"
        android:padding="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_negro" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="103dp"
        android:layout_height="107dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mundo" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_configurar_perfil_nombre"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_configurar_perfil_correo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <Button
        android:id="@+id/btnInformacionPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_configurar_perfil_informacion_personal"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:strokeWidth="1dp"
        android:drawableLeft="@drawable/ic_user_redondo"
        android:drawableRight="@drawable/ic_play"
        android:backgroundTint="@color/transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <Button
        android:id="@+id/btnPreferencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_configurar_perfil_preferencias"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:drawableLeft="@drawable/ic_star"
        android:drawableRight="@drawable/ic_play"
        android:backgroundTint="@color/transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInformacionPersonal" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/activity_configurar_perfil_configuracion"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPreferencias" />

    <Button
        android:id="@+id/btnInformacionLegal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_configurar_perfil_legal"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:drawableLeft="@drawable/ic_error"
        android:drawableRight="@drawable/ic_play"
        android:backgroundTint="@color/transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="105sp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/rojo"
        android:drawableLeft="@drawable/ic_close"
        android:text="@string/activity_configurar_perfil_cerrar_sesion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInformacionLegal" />

</androidx.constraintlayout.widget.ConstraintLayout>